fix a vertical alignment issue with input-group-addon

--- a/assets/sass/material/_text-field-input-group.scss
+++ b/assets/sass/material/_text-field-input-group.scss
@@ -31,6 +31,7 @@
   min-width: ($textfield-height + $textfield-margin-bottom);
   padding-top: $textfield-padding-top;
   text-align: center;
+  vertical-align: top;
   white-space: nowrap;
 
   @if not $enable-flex {
@@ -53,14 +54,14 @@
       font-size: $textfield-font-size-lg;
       line-height: $textfield-line-height-lg;
       min-width: ($textfield-height-lg + $textfield-margin-bottom-lg);
-      padding: $textfield-padding-top-lg;
+      padding-top: $textfield-padding-top-lg;
     }
     &.form-control-sm,
     .input-group-sm > & {
       font-size: $textfield-font-size-sm;
       line-height: $textfield-line-height-sm;
       min-width: ($textfield-height-sm + $textfield-margin-bottom-sm);
-      padding: $textfield-padding-top-sm;
+      padding-top: $textfield-padding-top-sm;
     }
   }
 
