--- a/css/material.css
+++ b/css/material.css
@@ -5131,6 +5131,7 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   min-width: 3rem;
   padding-top: 0.75rem;
   text-align: center;
+  vertical-align: top;
   white-space: nowrap;
   display: table-cell;
   width: 1%;
@@ -5146,13 +5147,13 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   font-size: 2.125rem;
   line-height: 2.5rem;
   min-width: 4.5rem;
-  padding: 0.875rem;
+  padding-top: 0.875rem;
 }
 .input-group-addon.form-control-sm, .floating-label-sm > .input-group-addon.form-control, .input-group-sm > .input-group-addon.form-control, .input-group-sm > .input-group-addon {
   font-size: 0.8125rem;
   line-height: 1.125rem;
   min-width: 2.5rem;
-  padding: 0.625rem;
+  padding-top: 0.625rem;
 }
 
 .textarea-autosize {
